@@ -17,6 +17,11 @@ reskins-lib-custom-colors-tier-3=Color: Tier 3
 reskins-lib-custom-colors-tier-4=Color: Tier 4
 reskins-lib-custom-colors-tier-5=Color: Tier 5
 reskins-lib-custom-colors-tier-6=Color: Tier 6
+reskins-lib-scope-entities=Reskin entities
+reskins-lib-scope-equipment=Reskin equipment
+reskins-lib-scope-items-and-fluids=Reskin items and fluids
+reskins-lib-scope-technologies=Reskin technologies
+
 
 [mod-setting-description]
 reskins-lib-icon-tier-labeling=Displays colored bars to indicate tier on icons.
@@ -43,6 +48,10 @@ reskins-lib-icon-tier-labeling-style-rectangle=[img=reskins-lib-rectangle-tier-l
 reskins-lib-icon-tier-labeling-style-rounded-half-circle=[img=reskins-lib-rounded-half-circle-tier-label]Rounded half-circles
 reskins-lib-icon-tier-labeling-style-rounded-rectangle=[img=reskins-lib-rounded-rectangle-tier-label]Rounded rectangles
 reskins-lib-icon-tier-labeling-style-teardrop=[img=reskins-lib-teardrop-tier-label]Teardrops
+reskins-lib-scope-entities=Enables reskinning of structures, robots and vehicles.
+reskins-lib-scope-equipment=Enables reskinning of equipment.
+reskins-lib-scope-items-and-fluids=Enables reskinning of items, fluids and related recipes.
+reskins-lib-scope-technologies=Enables reskinning of technologies.
 
 [reskins-library]
 reskins-bobs-mod-name=Artisanal Reskins: Bob's Mods
