@@ -3,6 +3,9 @@
 --
 -- See LICENSE in the project directory for license information.
 
+-- Check if reskinning needs to be done
+if reskins.lib.check_scope("entities", "bobs", "boblogistics") == false then return end
+
 -- We reskin the base entities only if we're doing custom colors
 local use_custom_colors = reskins.lib.setting("reskins-lib-customize-tier-colors")
 
