@@ -3,6 +3,8 @@ Version: 1.1.3
 Date: 2021.02.XX
   Features:
     - Moved handling for transport belts, splitters, and underground belts into this mod
+    - Added startup settings "Reskin entities", "Reskin equipment", "Reskin items and fluids" and "Reskin technologies" to control the scope of the various mod reskin toggles; by default the complete scope is enabled
+    - Added function `check_scope` to check the enabled scope and the given toggle setting and return the appropriate boolean or nil
   Changes:
     - Revised tint handling, separated transport belt tints into their own table, `reskins.lib.belt_tint_index`
     - Revised how tints are indexed, allowing for direct reference by tier-number instead of a string
